--- a/src/index.html
+++ b/src/index.html
@@ -5,12 +5,11 @@
     <title>React Boilerplate</title>
     <link href="http://netdna.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="./dist/css/component.css">
   </head>
   <body>
 
-    <div class="inject"></div>
+    <div class="root"></div>
 
-    <script src="./dist/bundle.js"></script>
+    <script src="/app.js"></script>
   </body>
 </html>
